                                                        -*- coding: utf-8 -*-
Changes with Apache 2.2.4

  *) Fix address-in-use startup failure caused by corruption of the list of
     listen sockets in some configurations with multiple generic Listen
     directives.  [Jeff Trawick]

  *) mod_headers: support regexp-based editing of HTTP headers [Nick Kew]

   * mod_proxy: Add explicit flushing feature.
     When Servlet container sends AJP body message with size 0,
     this means that Servlet container has asked for an explicit flush.
     Create flush bucket in that case. This feature has been added
     to the recent Tomcat versions without breaking the AJP protocol.
     [Mladen Turk]

  *) mod_proxy_balancer: Set the new environment variable BALANCER_ROUTE_CHANGED
     if a worker with a route different from the one supplied by the client
     had been chosen or if the client supplied no routing information for
     a balancer with sticky sessions. [Ruediger Pluem]

  *) mod_proxy_balancer: Add information about the route, the sticky session
     and the worker used during a request as environment variables. PR 39806.
     [Brian <brectanu gmail.com>]

  *) mod_proxy: Don't try to use dead backend connection. PR 37770.
     [Olivier BOEL <ob dorrboel.com>] 

  *) mod_proxy_balancer: Extract stickysession routing information contained as
     parameter in the URL correctly. PR 40400.
     [Ruediger Pluem, Tomokazu Harada <harada sysrdc.ns-sol.co.jp>]

  *) mod_proxy_ajp: Added cping/cpong support for the AJP protocol.
     A new worker directive ping=timeout will cause CPING packet
     to be send expecting CPONG packet within defined timeout.  
     In case the backend is too busy this will fail instead
     sending the full header.  [Mladen Turk]

  *) mod_disk_cache: Make sure that only positive integers are accepted
     for the CacheMaxFileSize and CacheMinFileSize parameters in the
     config file. PR39380 [Niklas Edmundsson <nikke acc.umu.se>]
